--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,6 +6,6 @@
 
     {% include 'home/hero.html' %}
 
-    {% include 'home/posts_list.html' %}
+    {% include 'home/post_list.html' %}
 
 {% endblock %}
