--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,14 +10,8 @@
                     <ul class="foot-menu">
 
 
-                        <li class="foot-menu-item mbr-fonts-style display-7"><a href="https://mobirise.com/help/"
-                                                                                class="text-success">Help Center</a>
-                        </li>
-                        <li class="foot-menu-item mbr-fonts-style display-7"><a href="http://forums.mobirise.com/"
-                                                                                class="text-success">Mobirise Forums</a>
-                        </li>
-                        <li class="foot-menu-item mbr-fonts-style display-7"><a href="https://mobirise.com/"
-                                                                                class="text-success">Mobirise.com</a>
+                        <li class="foot-menu-item mbr-fonts-style display-7"><a href="{% url 'home' %}"
+                                                                                class="text-success">Home</a>
                         </li>
                     </ul>
                 </div>
@@ -26,22 +20,22 @@
 
 
                         <div class="soc-item">
-                            <a href="https://twitter.com/mobirise" target="_blank">
+                            <a href="#" target="_blank">
                                 <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                            <a href="#" target="_blank">
                                 <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                            <a href="#" target="_blank">
                                 <span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a href="https://instagram.com/mobirise" target="_blank">
+                            <a href="#" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                             </a>
                         </div>
@@ -49,7 +43,7 @@
                 </div>
                 <div class="row row-copirayt">
                     <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                        © Copyright 2020 Mobirise. All Rights Reserved.
+                        © Copyright 2020. IFRO - Ariquemes - Lucas Pedreira
                     </p>
                 </div>
             </div>
@@ -64,5 +58,5 @@
         <p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1"
                                                                                            href="https://mobirise.com/drag-drop-website-builder.html">Drag
         and Drop Website Builder</a></section>
-    
+
 {% endblock %}
