--- a/home/templates/home/hero.html
+++ b/home/templates/home/hero.html
@@ -13,7 +13,9 @@
                     </h1>
 
                     <p class="mbr-text mbr-fonts-style display-7">
-                        {{ destaque.corpo|truncatewords:30 }}
+                        {% autoescape off %}
+                            {{ destaque.corpo|truncatewords:30 }}
+                        {% endautoescape %}
                     </p>
 
                 </div>
