--- a/home/templates/home/post_list.html
+++ b/home/templates/home/post_list.html
@@ -16,7 +16,9 @@
                     </h6>
 
                     <p class="mbr-text mbr-fonts-style display-7">
-                        {{ post.corpo|truncatewords:40 }}
+                        {% autoescape off %}
+                            {{ post.corpo|truncatewords:40 }}
+                        {% endautoescape %}
                     </p>
 
                     <div class="mbr-section-btn align-left">
