--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -24,7 +24,7 @@
                              class="img-fluid img-thumbnail">
                     </p>
 
-                    <div class="mbr-text mbr-fonts-style display-12 pt-4">
+                    <div class="mbr-text mbr-fonts-style display-12 pt-4 summernote">
                         {{ object.corpo|safe }}
                     </div>
 
