--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,7 @@
     </noscript>
     <link rel="preload" as="style" href="{% static 'assets/mobirise/css/mbr-additional.css' %}">
     <link rel="stylesheet" href="{% static 'assets/mobirise/css/mbr-additional.css' %}" type="text/css">
-
-
+    <link rel="stylesheet" href="{% static 'blog.css' %}" type="text/css">
 </head>
 <body>
 {% block content %}
