--- a/home/templates/home/hero.html
+++ b/home/templates/home/hero.html
@@ -12,11 +12,11 @@
                         </strong>
                     </h1>
 
-                    <p class="mbr-text mbr-fonts-style display-7">
+                    <div class="mbr-text mbr-fonts-style display-7 hero">
                         {% autoescape off %}
                             {{ destaque.corpo|truncatewords:30 }}
                         {% endautoescape %}
-                    </p>
+                    </div>
 
                 </div>
                 <div class="col-12 col-lg-5">
